--- a/Src/Infrastructure/RentalCars.Persistence/RentalCars.Persistence.csproj
+++ b/Src/Infrastructure/RentalCars.Persistence/RentalCars.Persistence.csproj
@@ -7,12 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contexts\" />
-    <Folder Include="EntityConfigurations\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +17,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\RentalCars.Application\RentalCars.Application.csproj" />
+    <ProjectReference Include="..\..\Core\RentalCars.Domain\RentalCars.Domain.csproj" />
   </ItemGroup>
 
 </Project>
