--- a/Src/Presentation/RentalCars.WebApi/appsettings.json
+++ b/Src/Presentation/RentalCars.WebApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "DbCon": "Data Source=DESKTOP-NIJ35NE\\SQL2022;Initial Catalog=CarsShopDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
+  }
+
+
 }
+
