--- a/Src/Presentation/RentalCars.WebApi/appsettings.json
+++ b/Src/Presentation/RentalCars.WebApi/appsettings.json
@@ -11,7 +11,36 @@
     "DbCon": "Data Source=DESKTOP-NIJ35NE\\SQL2022;Initial Catalog=CarsShopDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
 
   }
-
-
 }
+    //"Serilog": {
+    //  "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    //  "MinimumLevel": {
+    //    "Default": "Information",
+    //    "Override": {
+    //      "Microsoft": "Warning",
+    //      "System": "Warning"
+    //    }
+    //  },
+    //  "WriteTo": [
+    //    {
+    //      "Name": "Console"
+    //    },
+    //    {
+    //      "Name": "File",
+    //      "Args": {
+    //        "path": "./logs/log-.txt",
+    //        "rollOnFileSizeLimit": true,
+    //        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+    //        "rollingInterval": "Day"
+    //      }
+    //    }
+    //  ],
+    //  "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+    //}
+
+  
+  
+
+
+
 
